# typstpp

./: .gitignore  Cargo.toml  LICENSE-dependencies  README.md  example.out.typ  example.typ
.github/workflows/: check.yml
crates/typstpp-backend/: Cargo.toml
crates/typstpp-backend/src/: lib.rs
crates/typstpp-hs/: Cargo.toml
crates/typstpp-hs/src/: lib.rs
crates/typstpp-r/: Cargo.toml
crates/typstpp-r/src/: io.rs  lib.rs  prelude.R  table.rs
scripts/: check-deps.sh
src/: io.rs  lib.rs  main.rs  prelude.typ  source.rs
