[package]
name = "typstpp"
description = "The Typst preprocessor"
license = { workspace = true }
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typstpp-backend = { workspace = true }
typstpp-hs = { path = "crates/typstpp-hs", optional = true }
typstpp-r = { path = "crates/typstpp-r", optional = true }
notify-debouncer-full = { version = "0.3.1", default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
async-trait = { workspace = true }
tokio = { workspace = true }
crossterm = "0.27.0"
thiserror = { workspace = true }

[features]
r = ["typstpp-r"]
hs = ["typstpp-hs"]

[workspace.dependencies]
async-trait = "0.1.77"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "process", "io-std", "io-util", "signal", "sync", "fs"] }
typstpp-backend = { path = "crates/typstpp-backend" }

[workspace]
members = ["crates/typstpp-backend", "crates/typstpp-hs","crates/typstpp-r"]

[workspace.package]
license = "Apache-2.0"

[profile.release]
lto = true
