[package]
name = "typstpp-hs"
description = "Typstpp Haskell backend"
license = { workspace = true }
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
typstpp-backend = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }