[package]
name = "typstpp-r"
description = "Typstpp R backend"
license = { workspace = true }
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
libR-sys = "0.6.0"
thiserror = { workspace = true }
typstpp-backend = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
regex = "1.10.3"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.10.1"
